v0.18.1/_sources/content/tutorials/01-models_mapping/index.rst.txt
:orphan:

Models and Mapping
==================

In SimPEG, the model represents the set of parameters that define our geology.
For many problems, the model is a vector containing one or more physical
property values for each cell in the mesh.
This method and additional methods for parameterizing models will be
demonstrated in the tutorials.

Simulations and inverse problems in SimPEG require the user to define a
mapping which goes from the model space to the vector space containing the
mesh. For different types of models, we will demonstrate how this mapping
is generated and applied.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we demonstrate various ways that models can be defined and mapped to tensor meshes. Some t...">

.. only:: html

  .. image:: /content/tutorials/01-models_mapping/images/thumb/sphx_glr_plot_1_tensor_models_thumb.png
    :alt: Tensor Meshes

  :ref:`sphx_glr_content_tutorials_01-models_mapping_plot_1_tensor_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tensor Meshes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cylindrical meshes are useful when the geological problem demonstrates rotational symmetry. In ...">

.. only:: html

  .. image:: /content/tutorials/01-models_mapping/images/thumb/sphx_glr_plot_2_cyl_models_thumb.png
    :alt: Cylindrical Meshes

  :ref:`sphx_glr_content_tutorials_01-models_mapping_plot_2_cyl_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cylindrical Meshes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we demonstrate various ways that models can be defined and mapped to OcTree meshes. Some t...">

.. only:: html

  .. image:: /content/tutorials/01-models_mapping/images/thumb/sphx_glr_plot_3_tree_models_thumb.png
    :alt: Tree Meshes

  :ref:`sphx_glr_content_tutorials_01-models_mapping_plot_3_tree_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tree Meshes</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/tutorials/01-models_mapping/plot_1_tensor_models
   /content/tutorials/01-models_mapping/plot_2_cyl_models
   /content/tutorials/01-models_mapping/plot_3_tree_models


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: 01-models_mapping_python.zip </content/tutorials/01-models_mapping/01-models_mapping_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: 01-models_mapping_jupyter.zip </content/tutorials/01-models_mapping/01-models_mapping_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
